Correcting bug with accordion getting stuck if user clicked several times on plus/minus button

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ main.faq-main {
   margin-left: 2rem;
 }
 
-
 .question {
   display: flex;
   justify-content: space-between;
@@ -113,6 +112,10 @@ main.faq-main {
 
 .show {
   display: block;
+}
+
+.minus-svg {
+  display: none;
 }
 
 .underline {
